Update settings transition layout bug

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -119,6 +119,12 @@ p {
 	transition: all $ease-in-expo 100ms !important;
 }
 
+.settings-enter-active,
+.settings-leave-active {
+	max-height: 100dvh;
+	overflow: hidden;
+}
+
 .page-forward-enter-from,
 .page-backward-leave-to {
 	opacity: 0;
